--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-minimal
 title: Welcome!
+
+description: [Master thesis](https://github.com/FreekHeuvelmans/FreekHeuvelmans.github.io/blob/master/Master%20thesis%20final.pdf)
